// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context commitVariable normal 1`] = `
Object {
  "async": false,
  "execEndTime": null,
  "execStartTime": null,
  "uuid": null,
  "variableValue": Object {
    "result": Object {
      "result": 366,
      "type": "number",
    },
    "success": true,
  },
}
`;

exports[`Context commitVariable normal 2`] = `
Object {
  "ABS": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
}
`;

exports[`Context commitVariable normal 3`] = `
Object {
  "#615d7f74-dc97-4aae-8690-b6cba1072a6a.475d9e73-e52a-42b3-8a95-477596812900": Array [
    Object {
      "namespaceId": "37198be0-d10d-42dc-ae8b-20d45a95401b",
      "variableId": "b4289606-2a52-48e3-a50f-77ee321dd84e",
    },
  ],
  "#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
    Object {
      "namespaceId": "37198be0-d10d-42dc-ae8b-20d45a95401b",
      "variableId": "b4289606-2a52-48e3-a50f-77ee321dd84e",
    },
  ],
}
`;

exports[`Context findVariable 1`] = `
Object {
  "foo": Array [
    Array [],
    Array [],
    Array [],
  ],
}
`;

exports[`Context findVariable 2`] = `
Object {
  "bar": Array [
    Array [
      Object {
        "acceptError": false,
        "args": Array [
          Object {
            "name": "number",
            "type": "number",
          },
        ],
        "async": false,
        "chain": false,
        "description": "Returns the absolute value of a number.",
        "effect": false,
        "examples": Array [
          Object {
            "codeFragments": Array [
              Object {
                "attrs": undefined,
                "code": "Equal",
                "display": "=",
                "errors": Array [],
                "hide": false,
                "renderText": undefined,
                "type": "any",
                "value": "=",
              },
              Object {
                "attrs": undefined,
                "code": "Function",
                "display": "ABS",
                "errors": Array [],
                "hide": false,
                "renderText": undefined,
                "type": "any",
                "value": "ABS",
              },
              Object {
                "attrs": undefined,
                "code": "LParen",
                "display": "(",
                "errors": Array [],
                "hide": false,
                "renderText": undefined,
                "type": "any",
                "value": "(",
              },
              Object {
                "attrs": undefined,
                "code": "Minus",
                "display": "-",
                "errors": Array [],
                "hide": false,
                "renderText": undefined,
                "type": "any",
                "value": "-",
              },
              Object {
                "attrs": undefined,
                "code": "NumberLiteral",
                "display": "1",
                "errors": Array [],
                "hide": false,
                "renderText": undefined,
                "type": "number",
                "value": "1",
              },
              Object {
                "attrs": undefined,
                "code": "RParen",
                "display": ")",
                "errors": Array [],
                "hide": false,
                "renderText": undefined,
                "type": "number",
                "value": ")",
              },
            ],
            "input": "=ABS(-1)",
            "output": Object {
              "result": 1,
              "type": "number",
            },
          },
        ],
        "group": "core",
        "key": "ABS",
        "lazy": false,
        "name": "ABS",
        "pure": true,
        "reference": [Function],
        "returns": "number",
        "testCases": Array [
          Object {
            "input": Array [
              -1,
            ],
            "output": 1,
          },
        ],
      },
    ],
    Array [
      Object {
        "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
        "variableId": "1588aedf-06e1-47f1-9282-d2ffe865974c",
      },
    ],
    Array [
      Object {
        "name": "foo",
        "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
      },
    ],
  ],
}
`;

exports[`Context removeVariable 1`] = `
Array [
  "#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c",
]
`;

exports[`Context removeVariable 2`] = `
Object {
  "ABS": Array [],
}
`;

exports[`Context removeVariable 3`] = `
Object {
  "#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c": Array [],
}
`;

exports[`Context reset 1`] = `
Array [
  "#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c",
  "#615d7f74-dc97-4aae-8690-b6cba1072a6a.475d9e73-e52a-42b3-8a95-477596812900",
]
`;

exports[`Context reset 2`] = `
Object {
  "ABS": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
}
`;

exports[`Context reset 3`] = `
Object {
  "#d986e871-cb85-4bd5-b675-87307f60b882.1588aedf-06e1-47f1-9282-d2ffe865974c": Array [
    Object {
      "namespaceId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
      "variableId": "475d9e73-e52a-42b3-8a95-477596812900",
    },
  ],
}
`;
